fix: background on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,8 +1,3 @@
-#impress .step {
-  height: 100vh;
-  width: 100vw;
-}
-
 #impress .step .substep {
     opacity: 0;
 }
